Added the begining of the table for the budget and setup some of the controllers

--- a/BlankFinance/BlankFinance/BlankFinance.csproj
+++ b/BlankFinance/BlankFinance/BlankFinance.csproj
@@ -6,6 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Models\Interfaces\" />
+    <Folder Include="Views\Import\" />
+    <Folder Include="Views\Statistics\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
