Created the form for inputting a single transaction and fixedt he links on the navbar

--- a/BlankFinance/BlankFinance/BlankFinance.csproj
+++ b/BlankFinance/BlankFinance/BlankFinance.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Components\" />
     <Folder Include="Models\Interfaces\" />
     <Folder Include="Views\Import\" />
     <Folder Include="Views\Statistics\" />
