Updated Import controller to add one transaction to the DB. Updated the sql DB

--- a/BlankFinance/BlankFinance/appsettings.json
+++ b/BlankFinance/BlankFinance/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "BFTransactions": {
-      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=Transactions;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "ConnectionString": "Data Source=DESKTOP-QUQ38GH;Initial Catalog=BlankFinance;Integrated Security=True"
     }
   }
 }
