--- a/BlankFinance/BlankFinance/bower.json
+++ b/BlankFinance/BlankFinance/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bootstrap": "4.2.1",
     "jQuery": "3.3.1",
-    "Font-Awesome": "5.6.3"
+    "Font-Awesome": "5.6.3",
+    "ajax": "v3.0.4"
   }
 }
